--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@types/node": "^13.13.30",
     "adal-node": "^0.2.1",
     "aws-sdk": "^2.784.0",
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -24,7 +24,9 @@
     "uuid": "^7.0.3",
     "vue": "^2.6.12",
     "vue-router": "^3.4.8",
-    "vuetify": "^2.3.16",
+    "vuetify": "^2.3.16"
+  },
+  "devDependencies": {
     "@mdi/js": "^4.9.95",
     "@vue/cli-plugin-babel": "^3.12.1",
     "@vue/cli-service": "^3.12.1",
